<resources>
    <string name="app_name">EMD Community College</string>
    <string name="channel_name">thisChannel</string>
    <string name="book">Book Icon</string>
    <string name="channel_description">thisDescription</string>
    <!-- Strings related to login_activity -->
    <string name="prompt_firstName">Enter First Name</string>
    <string name="prompt_lastName">Enter Last Name</string>
    <string name="prompt_emailAddress">Enter Email Address</string>
    <string name="prompt_username">Enter Username</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_a_new_user">Register A New User</string>
</resources>